<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/gradStar">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:text="@string/cell"
        android:textColor="@color/colorPrimary"
        android:id="@+id/editText4"
        android:layout_marginBottom="65dp"
        android:layout_above="@+id/videomasaudio"
        android:layout_toStartOf="@+id/videoView2"
        android:layout_marginEnd="28dp" />

    <TextView
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:text="@string/bddb"
        android:textColor="@color/colorPrimary"
        android:id="@+id/editText5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <VideoView
        android:id="@+id/VideoView"
        android:layout_width="120dp"
        android:layout_height="230dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/editText5"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/videoView2" />

    <VideoView

        android:layout_width="120dp"
        android:layout_height="200dp"
        android:id="@+id/videoView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:id="@+id/videomasaudio"
        android:background="@color/gradStar"
        android:textColor="@color/colorPrimary"
        android:text="@string/start_video"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>






